# clarity-ai-transparent-dating

./: .env.example  .gitignore  AGENTS.md  AI_BOUNDARIES.md  BERLIN_LAUNCH_PLAN.md  CHANGELOG.md  Clarity_AI_Pitch_with_Diagrams copy.docx  DECISIONS.md  DEPLOY.md  DESIGN_NOTES.md  GIT_RECONCILIATION_REPORT.md  MATCHING_MODEL.md  MVP_SCOPE.md  PRODUCT_BRIEF.md  README.md  REPLIT_NOTES.md  REPO_DECISION.md  ROADMAP.md  SAFETY_PRINCIPLES.md  SYSTEM_ARCHITECTURE.md  USER_PERSONAS.md  package-lock.json  package.json  portfolio_update_summary.md  tsconfig.base.json
services/signal-engine/: README.md  pyproject.toml
services/signal-engine/app/: __init__.py  __main__.py  main.py  settings.py
services/signal-engine/app/routes/: __init__.py  v1_analysis.py  v2_analysis.py
services/signal-engine/communication_signal_engine/: __init__.py  contracts.py  contracts_v2.py  language_policy.py  limits.py  orchestrator.py  t1_protocol.py  t1_sessions.py
services/signal-engine/communication_signal_engine/audio/: __init__.py  contracts.py  deletion.py  features.py  intake.py
services/signal-engine/communication_signal_engine/cues/: __init__.py  deterministic.py  explanations.py  registry.py
services/signal-engine/communication_signal_engine/privacy/: __init__.py  admission.py  benchmark.py  patterns.py  receipts.py  redaction.py
services/signal-engine/communication_signal_engine/semantic/: __init__.py  embeddings.py  model_loader.py
services/signal-engine/tests/: conftest.py
services/signal-engine/tests/fixtures/: dating_signal_cases.json  t1_contract_mutations.json  (+3 more)
(+203 files in other folders)
